testing the tutorial

--- a/guide/tutorial/04-step-03-keyword-completation.ipynb
+++ b/guide/tutorial/04-step-03-keyword-completation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(rdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,51 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------------------------------\n",
-      "Record index: 0\n",
-      "{\n",
-      "  \"Author Keywords\": \"Component trends; Empirical mode decomposition; Interference-less machine learning; Long short-term memory; Meta-learning; Moving average; Noise reduction; Nonlinear autoregressive neural network; Time series forecasting\",\n",
-      "  \"Index Keywords\": null,\n",
-      "  \"Title\": \"Improving DWT-RNN model via B-spline wavelet multiresolution to forecast a high-frequency time series\"\n",
-      "}\n",
-      "-----------------------------------------------\n",
-      "Record index: 1\n",
-      "{\n",
-      "  \"Author Keywords\": null,\n",
-      "  \"Index Keywords\": \"Earnings; Financial data processing; Information science; Newsprint; Consumer price index; Distributed representation; Financial time series forecasting; Long short term memory; Novel applications; Stock predictions; Textual information; Tokyo Stock Exchange; Costs\",\n",
-      "  \"Title\": \"Direct marketing campaigns in retail banking with the use of deep learning and random forests\"\n",
-      "}\n",
-      "-----------------------------------------------\n",
-      "Record index: 2\n",
-      "{\n",
-      "  \"Author Keywords\": \"And financial time series prediction; Dynamic neural network; Exchange rate time series\",\n",
-      "  \"Index Keywords\": \"Bioinformatics; Financial data processing; Intelligent computing; Multilayer neural networks; Recurrent neural networks; Dynamic neural networks; Exchange rates; Financial time series predictions; Immune algorithms; Regularization technique; Self-organised; Self-organized neural networks; Stationary signal; Algorithms\",\n",
-      "  \"Title\": \"Combining time-series and textual data for taxi demand prediction in event areas: A deep learning approach\"\n",
-      "}\n",
-      "-----------------------------------------------\n",
-      "Record index: 3\n",
-      "{\n",
-      "  \"Author Keywords\": \"Artificial intelligence; Deep learning; Financial forecasting; NARX algorithm; Stock prediction\",\n",
-      "  \"Index Keywords\": \"Artificial intelligence; Big data; Commerce; Deep learning; Electronic trading; Financial markets; Forecasting; Mean square error; Risk assessment; Time series analysis; Auto-regressive exogenous inputs; Bankruptcy prediction; Computational technology; Financial applications; Financial forecasting; Levenberg-Marquardt algorithm; Stock market prediction; Stock predictions; Learning algorithms\",\n",
-      "  \"Title\": \"Stock price forecasting model based on modified convolution neural network and financial time series analysis\"\n",
-      "}\n",
-      "-----------------------------------------------\n",
-      "Record index: 4\n",
-      "{\n",
-      "  \"Author Keywords\": null,\n",
-      "  \"Index Keywords\": \"Commerce; Deep learning; Electronic trading; Financial markets; Forecasting; Multivariant analysis; Network architecture; Forecasting performance; Historical data; Learning architectures; Long-term forecasting; Market forecast; Multi variate analysis; Stock market forecasting; Time series forecasting; Long short-term memory\",\n",
-      "  \"Title\": \"Sentiment-aware volatility forecasting\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from techminer import display_records\n",
     "\n",
@@ -145,30 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    Component trends;Empirical mode decomposition;...\n",
-       "1    Earnings;Financial data processing;Information...\n",
-       "2    Exchange rate time series;Bioinformatics;Excha...\n",
-       "3    Auto-regressive exogenous inputs;NARX algorith...\n",
-       "4    Commerce;Deep learning;Electronic trading;Fina...\n",
-       "5    High-frequency forecasting;Discrete wavelet tr...\n",
-       "6    Financial time series;Recurrent neural network...\n",
-       "7    Overfitting preventions;Medical data analysis;...\n",
-       "8    Complex networks;Data mining;Economics;Forecas...\n",
-       "9    MAPE;Financial data processing;Electronic trad...\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from techminer import merge_fields\n",
     "merge_fields(rdf['Author Keywords'], rdf['Index Keywords'], sepA=';', sepB=';', new_sep=';')[0:10]"
@@ -176,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,59 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(rdf[rdf['keywords'].map(lambda x: x is None)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['(2D) 2 PCA',\n",
-       " '(2D) <sup>2</sup> PCA',\n",
-       " 'AMAPE',\n",
-       " 'ANN',\n",
-       " 'ARIMA',\n",
-       " 'ARIMA Model',\n",
-       " 'ARIMA model',\n",
-       " 'ARIMA modeling',\n",
-       " 'Absolute values',\n",
-       " 'Abstract representation',\n",
-       " 'Accounts receivable',\n",
-       " 'Accuracy Improvement',\n",
-       " 'Accuracy of classifications',\n",
-       " 'Accurate prediction',\n",
-       " 'Activation layer',\n",
-       " 'AdaBoost algorithm',\n",
-       " 'Adam Optimizer',\n",
-       " 'Adaptive boosting',\n",
-       " 'Adaptive gradient algorithm',\n",
-       " 'Adaptive noise']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from techminer.keywords import Keywords\n",
     "kyw = Keywords()\n",
@@ -254,47 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(rdf[rdf['Abstract'].map(lambda x: x is None)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(rdf[rdf['Title'].map(lambda x: x is None)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,27 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(rdf[rdf['keywords'].map(lambda x: x is None)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
