Added doctest for DocNormalizer and DocumentClustering

--- a/guide/tutorial/23-documents-clustering.ipynb
+++ b/guide/tutorial/23-documents-clustering.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "rdf = RecordsDataFrame(\n",
     "    pd.read_json(\n",
-    "        'step-07.json', \n",
+    "        '..\\\\..\\\\data\\\\cleaned.json', \n",
     "        orient='records', \n",
     "        lines=True))"
    ]
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -96,24 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocabulary size: 2746\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Vocabulary size: {len(set([word for doc in rdf.loc[:,'Abstract_cleaned'] for word in doc.split()]))}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,22 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DocumentClustering(max_count=1.0, min_count=5, n_clusters=6, n_components=100,\n",
-       "                   random_state=42, reduce_dimensions=True, use_tfidf=True,\n",
-       "                   vectorize=True)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "document_clustering.fit(rdf.loc[:,'Abstract_cleaned'])"
    ]
@@ -158,90 +137,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 7.13428736e-01, -4.76060165e-02,  5.29940552e-02, ...,\n",
-       "        -4.01021078e-02,  5.87939975e-02,  3.22097256e-03],\n",
-       "       [ 4.71860375e-01,  1.45710210e-01, -2.84670255e-01, ...,\n",
-       "         2.28289060e-02, -9.56853825e-02,  5.13728047e-02],\n",
-       "       [ 6.03413082e-01, -2.90265662e-01,  4.36284296e-01, ...,\n",
-       "         1.40226363e-02,  1.05095781e-02,  1.55980547e-02],\n",
-       "       ...,\n",
-       "       [ 4.46258507e-01,  7.62377289e-01,  2.30886605e-01, ...,\n",
-       "         2.96174282e-04,  6.35138520e-03, -2.24497242e-02],\n",
-       "       [ 4.32616139e-01,  1.74846432e-01,  3.16626155e-01, ...,\n",
-       "         2.82303028e-02, -9.16002390e-02, -3.84914296e-02],\n",
-       "       [ 5.23728023e-01,  4.36412038e-01,  1.75262218e-01, ...,\n",
-       "         4.89726965e-02,  1.56163155e-01,  9.69715171e-02]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "document_clustering.dfm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dimensions of the documents vectorized: 144 rows (documents) x 100 columns (features) \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Dimensions of the documents vectorized: {document_clustering.dfm.shape[0]} rows (documents) x {document_clustering.dfm.shape[1]} columns (features) ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Information keeped from the dimension reduction: 90.21%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Information keeped from the dimension reduction: {round(document_clustering.explained_var_*100,2)}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Information from the clusters performance: 0.055\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Information from the clusters performance: {round(document_clustering.silhouette_score_,3)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,26 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    97\n",
-       "0    25\n",
-       "5    10\n",
-       "3     6\n",
-       "4     3\n",
-       "2     3\n",
-       "Name: Cluster_labels, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdf['Cluster_labels'].value_counts()"
    ]
